frontend/src/index.css
body {
  margin: 0;
  /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;*/
  font-family: "Montserrat", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
#root {
  height: 100%;
  width: 100%;
  overflow: auto;
}
#App {
  position: relative;
  text-align: center;
  top: 5%;
  height: 100vh;
}
code {
  /*font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace; */
  font-family: "Montserrat", sans-serif;
}
.hidden {
  display: none;
}
/****************************************login************************************/
#login {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  z-index: 2;
}
.input {
  margin-top: 2rem;
}
/*****************************************mainpage****************************************/
#rocket-holder {
}

#rocket {
  min-width: 5rem;
  min-height: 5rem;
}

.rocket-grow {
  transform: scale(1.5);
}
#pathsvg {
  transform: scale(1.5);
  color: "white";
}

#rocket-container {
  /*transform: translate(20rem, -20rem);*/
}

/**************************Toggle button****************************/
#toggle-container {
  width: 3.5rem;
  height: 2.5rem;
  border-radius: 2rem;
  position: absolute;
  top: 2%;
  right: 1%;
  display: flex;
  align-items: center;
  justify-content: center;
}
#cloud1 {
  position: absolute;
  top: 2%;
  right: 1%;
  z-index: 3;
  border-radius: 50%;
  width: 5rem;
  height: 5rem;
}
#circle {
  width: 1.5rem;
  height: 1.5rem;
  z-index: 1;
  border-radius: 50%;
  pointer-events: none;
  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 2px, rgba(0, 0, 0, 0.22) 0px 1px 2px;
}
toggle-background::before {
  width: 2.5rem;
  height: 1.5rem;
  top: 1.5rem;
  background-color: aqua;
  content: "";
}
toggle-background::after {
  width: 2.5rem;
  height: 1.5rem;
}
.roundthing {
  width: 3.5rem;
  height: 2rem;
  border-radius: 2rem;
  display: flex;
  align-content: center;
  padding: 0.25rem;
}
#day {
  opacity: 0;
  width: 1.6rem;
  height: 1.6rem;
  margin-bottom: 0.3rem;
  border-radius: 50%;
}
#night {
  opacity: 0;
}

#nightsvg {
  width: 1.6rem;
  height: 1.6rem;
  margin-bottom: 0.1rem;
}

.toggle-hide {
  opacity: 0;
}
#cloud-container {
  width: 10rem;
  height: 2.5rem;
  border-radius: 2rem;
  position: absolute;
  top: 2%;
  right: 1%;
  pointer-events: none;
}
cloud {
  width: 1.3rem;
  height: 0.3rem;
  background-color: rgb(253, 249, 249);
}

#cloud2 {
  position: absolute;
  border-radius: 50%;
  top: 0.7rem;
  right: 3.8rem;
  z-index: 3;
}
#cloud3 {
  position: absolute;
  border-radius: 50%;
  top: 1rem;
  right: 3.5rem;
  z-index: 3;
}
#star3 {
  position: absolute;
  top: 1rem;
  z-index: 0;
  right: 3.5rem;
}

#wordcontainer {
  margin-top: 1rem;
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0%;
}

#mainpage {
  position: absolute;
  top: 15%;
  left: 50%;
  transform: translate(-50%);
  display: flex;
  min-height: 70%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

#form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex: 1;
  gap: 0.5rem;
}
#form > * {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-shrink: 1;
  gap: 0.5rem;
}
#formcontainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#additionalinformation {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
#invite {
}
#info {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  flex-shrink: 1;
}
ul {
  list-style-type: none;
}
#datetimeplace {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex: 1;
}
#formcontainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
li {
  display: flex;
  flex: 1;
  margin-top: 0.5rem;
  justify-self: flex-start;
  align-items: center;
}
.icon {
  color: rgb(63, 63, 171);
  margin-right: 0.5rem;
  filter: drop-shadow(1px 1px 1px #666);
}
#sidebar a.active {
  color: red;
}

#star1 {
  animation: example 50s linear infinite;
}
#star2 {
  animation: example 100s linear infinite;
}
#star3 {
  animation: example 150s linear infinite;
}
@keyframes example {
  from {
    transform: translateY(0px);
  }
  to {
    transform: translateY(-2000px);
  }
}
#footer {
  top: 96%;
  margin: auto;
  width: 100%;
  height: 1rem;
  display: flex;
  justify-content: center;
  /* padding-bottom: 1rem; */
  position: fixed;
}
a {
  text-decoration: none;
}
@media (max-height: 800px) and (min-height: 500px) {
  #mainpage {
    top: 25%;
  }
}

@media /*only screen and(orientation: landscape) or*/ (max-height: 500px) {
  #mainpage {
    display: none;
  }
  #footer {
    top: 92%;
  }
}

